--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   pin_input_text_field: ^4.5.1
   carousel_slider: ^4.2.1
   flutter_svg: ^2.0.10+1
+  lottie: ^3.1.2
+  flutter_animate: ^4.5.0
+  provider: ^6.1.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
