--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   flutter_animate: ^4.5.0
   provider: ^6.1.2
   cached_network_image: ^3.3.1
+  flutter_email_sender: ^6.0.3
+  loader_overlay: ^4.0.0
+  map_location_picker: ^1.3.0
 
 dev_dependencies:
   flutter_test:
